--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+
 </style>
 <body class="w3-light-grey">
 
@@ -36,9 +37,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   <div class="w3-bar-block">
     <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Overview</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-eye fa-fw"></i>  Portfolios</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i>  Stonks</a><br><br>
+    <a href="#" class="w3-bar-item w3-button w3-padding" onclick="clearMainPanel()"><i class="fa fa-dashboard fa-fw"></i>  Overview</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding" onclick="showInMainPanel('PortfoliosContentPanel')"><i class="fa fa-briefcase fa-fw"></i>  Portfolios</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding" onclick="showInMainPanel('StonksContentPanel')"><i class="fa fa-money fa-fw"></i>  Stonks</a><br><br>
   </div>
 </nav>
 
@@ -57,7 +58,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding w3-margin-bottom">
     <div class="w3-third">
       <div class="w3-container w3-red w3-padding-16">
-        <div class="w3-left"><i class="fa fa-comment w3-large"></i></div>
+        <div class="w3-left"><i class="fa fa-envelope w3-large"></i></div>
         <div class="w3-right">
           <h3>0</h3>
         </div>
@@ -67,12 +68,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div class="w3-third">
       <div class="w3-container w3-blue w3-padding-16">
-        <div class="w3-left"><i class="fa fa-eye w3-large"></i></div>
+        <div class="w3-left"><i class="fa fa-briefcase w3-large"></i></div>
         <div class="w3-right">
           <h3>2</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>Portfolios</h4>
+          <h4>Portfolios</h4>
       </div>
     </div>
     <div class="w3-third">
@@ -90,8 +91,30 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-panel">
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-col">
-        <h5>Portfolios</h5>
-          <div id="root"></div>
+        <h5>News</h5>
+          <div id="news"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-panel">
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-col">
+        <div id="PortfoliosContentPanel-Header" style="display: none;">
+          <h5>Portfolios</h5>
+        </div>
+        <div id="PortfoliosContentPanel" style="display: none;"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-panel">
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-col">
+        <div id="StonksContentPanel-Header" style="display: none;">
+          <h5>Stonks</h5>
+        </div>
+        <div id="StonksContentPanel" style="display: none;"></div>
       </div>
     </div>
   </div>
@@ -131,7 +154,29 @@ function w3_close() {
   overlayBg.style.display = "none";
 }
 
+function showInMainPanel(sectionToDisplay) {
+  var x = document.getElementById(sectionToDisplay);
+  var y = document.getElementById(sectionToDisplay+'-Header');
+  if (x.style.display === "none") {
+    x.style.display = "block";
+    y.style.display = "block";
+  } else {
+    x.style.display = "none";
+    y.style.display = "none";
+  }
+}
 
+//TODO: leverage css toggling for this better via class if possible
+function clearMainPanel() {
+  var w = document.getElementById('PortfoliosContentPanel');
+  var x = document.getElementById('PortfoliosContentPanel-Header');
+  var y = document.getElementById('StonksContentPanel');
+  var z = document.getElementById('StonksContentPanel-Header');
+  w.style.display = "none";
+  x.style.display = "none";
+  y.style.display = "none";
+  z.style.display = "none";
+}
 </script>
 
 </body>
