--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,16 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     overflow: hidden;
     transition: max-height 0.2s ease-out;
   }
+.accordion:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
 </style>
 <body class="w3-light-grey">
 
@@ -188,6 +198,23 @@ function clearMainPanel() {
   y.style.display = "none";
   z.style.display = "none";
 }
+</script>
+
+<script>
+  var acc = document.getElementsByClassName("accordion");
+  var i;
+
+  for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.maxHeight) {
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      }
+    });
+  }
 </script>
 
 </body>
