--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Dashboard</title>
+<title>Dividend Master</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -32,16 +32,16 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </div>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="sidebar"><br>
   <div class="w3-container w3-row">
     <div class="w3-col s4">
       <img src="/resources/avatar.png" class="w3-circle w3-margin-right" style="width:46px">
     </div>
     <div class="w3-col s8 w3-bar">
       <span>Welcome, <strong>Jason</strong></span><br>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-user"></i></a>
-      <a href="#" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
+      <a href="#" class="w3-bar-item w3-button" data-cy="sidebar-envelope"><i class="fa fa-envelope"></i></a>
+      <a href="#" class="w3-bar-item w3-button" data-cy="sidebar-user"><i class="fa fa-user"></i></a>
+      <a href="#" class="w3-bar-item w3-button" data-cy="sidebar-config"><i class="fa fa-cog"></i></a>
     </div>
   </div>
   <hr>
@@ -49,7 +49,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h5>Dashboard</h5>
   </div>
   <div class="w3-bar-block">
-    <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu" data-cy="close-menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
     <a href="#" class="w3-bar-item w3-button w3-padding" onclick="clearMainPanel()"><i class="fa fa-dashboard fa-fw"></i>  Overview</a>
     <a href="#" class="w3-bar-item w3-button w3-padding" onclick="showInMainPanel('PortfoliosContentPanel')"><i class="fa fa-briefcase fa-fw"></i>  Portfolios</a>
     <a href="#" class="w3-bar-item w3-button w3-padding" onclick="showInMainPanel('StonksContentPanel')"><i class="fa fa-money fa-fw"></i>  Stonks</a><br><br>
